--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,65 @@
+# ===============================
+# Unity generated folders
+# ===============================
+Library/
+Temp/
+Obj/
+Build/
+Builds/
+Logs/
+UserSettings/
+
+# ===============================
+# MemoryCaptures (Unity 2017+)
+# ===============================
+MemoryCaptures/
+
+# ===============================
+# Asset meta data cache
+# ===============================
+*.pidb
+*.booproj
+*.svd
+
+# ===============================
+# IDE / Editor files
+# ===============================
+.vs/
+.vscode/
+.idea/
+*.csproj
+*.sln
+*.suo
+*.tmp
+*.user
+*.userprefs
+*.pidb.meta
+
+# ===============================
+# OS generated files
+# ===============================
+.DS_Store
+.DS_Store?
+._*
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# ===============================
+# Crash reports
+# ===============================
+sysinfo.txt
+
+# ===============================
+# Build artifacts
+# ===============================
+*.apk
+*.aab
+*.exe
+*.unitypackage
+
+# ===============================
+# Addressables & StreamingAssets
+# ===============================
+StreamingAssets/aa/
 
